--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ keywords = ["winit", "input", "helper", "state", "cache"]
 categories = ["game-engines", "os", "gui"]
 
 [dependencies]
+fnv = "1.0"
 winit = { version = "0.27.0", default-features = false }
 
 [dev-dependencies]
