--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ categories = ["game-engines", "os", "gui"]
 
 [dependencies]
 fnv = "1.0"
-winit = { version = "0.27.0", default-features = false }
+winit = "0.27"
 
 [dev-dependencies]
-winit = { version = "0.27.0" }
+winit = "0.27"
